--- a/users/templates/new_subscriptions.html
+++ b/users/templates/new_subscriptions.html
@@ -51,7 +51,6 @@
                                 <table class="table table-striped" style="border: 1px">
                                     <thead>
                                         <tr>
-                                            <th class="text-left">ID</th>
                                             <th>Customer</th>
                                             <th>Phone</th>
                                             <th>Email</th>
@@ -61,9 +60,8 @@
                                     </thead>
                                     <tbody>
                                     
-                                    {% for sub in subscriptions %}
+                                    {% for sub in page_obj %}
                                     <tr>
-                                            <td><a class="btn-link" href="#">{{sub.id}}</a></td>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
                                             <td>{{sub.CustomerID.user.email}}</td>
                                             <td>{{sub.CustomerID.user.phone}}</td>
@@ -87,6 +85,24 @@
                                     
                                         </tbody>
                                 </table>
+                            </div>
+
+                            <div class="pagination">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a class="btn btn-primary mb-4" href="?page=1">&laquo; first</a>
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+                
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+                
+                                    {% if page_obj.has_next %}
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                </span>
                             </div>
                             
                         </div>
