--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -75,7 +75,7 @@
                                     </thead>
                                     <tbody>
                                     
-                                    {% for sub in subscriptions %}
+                                    {% for sub in page_obj %}
                                     <tr>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
                                             <td>{{sub.Category.Title}}</td>
@@ -129,6 +129,24 @@
                                     
                                         </tbody>
                                 </table>
+                            </div>
+
+                            <div class="pagination">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a class="btn btn-primary mb-4" href="?page=1">&laquo; first</a>
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+                
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+                
+                                    {% if page_obj.has_next %}
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a class="btn btn-primary mb-4" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                </span>
                             </div>
                             
                         </div>
