--- a/users/templates/orders.html
+++ b/users/templates/orders.html
@@ -1,6 +1,8 @@
 {% extends 'base.html'%}
 {% load static %}
+{% load humanize %}
 {% block content%}
+
 
  <div id="page-content">
                     
@@ -75,7 +77,7 @@
                                             <td>{{order.shippingaddress.phone}} </td>
                                             <td>{{order.shippingaddress.address}} - {{order.shippingaddress.city}}</td>
                                             <td>{{order.date_ordered}}</td>
-                                            <td>{{order.get_cart_total}} Rwf</td>
+                                            <td>{{order.get_cart_total|intcomma}} Rwf</td>
                                             
                                             <td>
                                                 <a href="{% url 'order_details' order.id%}">
