--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -56,7 +56,7 @@
 
 
 <body>
-	<div id="container" class="cls-container" style="background-image: url({% static 'img/bg-img/3.jpg' %}) ; background-size: cover;" >
+	<div id="container" class="cls-container" style="background-image: url({% static 'img/bg-img/BG.png' %}) ; background-size: cover;" >
 		
 		
 		<div class="cls-content">
